--- a/index.html
+++ b/index.html
@@ -37,22 +37,16 @@
         }
 
         .telo {
-            -webkit-filter: blur(5px);
+            /*-webkit-filter: blur(5px);
             -moz-filter: blur(5px);
             -o-filter: blur(5px);
             -ms-filter: blur(5px);
-            filter: blur(5px);
-        }
-
-        .loadingImg {
-            display: block;
-            margin: 0 auto;
+            filter: blur(5px);*/
         }
     </style>
 </head>
 
 <body>
-    <img class="loadingImg" src="img/cat.gif">
     <div class="telo">
         <div class="sidebar">
             <div class="cas">
