--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             }
 
 
-            var link = "http://" + window.location.hostname + "/FER_B/";
+            var link = "http://" + window.location.hostname + "/FER/";
             var fncLink = link + 'models/getTree';
 
             $.get(fncLink, {type: type}, function(data) {
