--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
                 <div class="topologia_pills">
                     <ul id="topoTab" class="nav nav-tabs" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#tcyTab" role="tab" data-toggle="tab" data-type="tcy">Čas cyklu</a>
+                            <a class="nav-link active" href="#tcyTopo" role="tab" data-toggle="tab" data-type="tcy">Čas cyklu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#cnvTab" role="tab" data-toggle="tab"  data-type="cnv">Dopravníky</a>
-                        </li>
+                            <a class="nav-link" href="#cnvTopo" role="tab" data-toggle="tab"  data-type="cnv">Dopravníky</a>
+                        </li>   
                         <!--<li class="nav-item">
                             <a class="nav-link" href="#parTab" role="tab" data-toggle="tab"  data-type="par">Pareto</a>
                         </li>-->
                     </ul>
                 </div>
                 <div class="topologia_obsah tab-content">
-                    <div class="tab-pane active" id="tcyTab" role="tabpanel"></div>
-                    <div class="tab-pane" id="cnvTab" role="tabpanel"></div>
+                    <div class="tab-pane active" id="tcyTopo" role="tabpanel"></div>
+                    <div class="tab-pane" id="cnvTopo" role="tabpanel"></div>
                     <!--<div class="tab-pane" id="parTab" role="tabpanel"></div>-->
                 </div>
             </div>
@@ -146,17 +146,8 @@
                 <p>Statistiky Sapia</p>
             </div>
 
-            <div id='mainGrafPanel' class="graf-panel">
-                <div class="graf-kontainer">
-                    <div class="graf">
-                        <div class="telografu"></div>
-                    </div>
-                    <div class="pareto"></div>
-                </div>
-            </div>
+            <div id='mainGrafPanel' class="graf-panel"></div>
         </div>
-
-
     </div>
     <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
@@ -168,6 +159,7 @@
     <script src="js/jqxpanel.js" type="text/javascript"></script>
     <script src="js/jqxtree.js" type="text/javascript"></script>
     <script src="js/jqxcheckbox.js" type="text/javascript"></script>
+    <script src="js/plotly.min.js" type="text/javascript"></script>
     <script src="js/moment.min.js" type="text/javascript"></script>
     <script src="js/daterangepicker.js" type="text/javascript"></script>
     <script src="js/ion.rangeSlider.js" type="text/javascript"></script>
@@ -185,18 +177,6 @@
 
         loadTree('tcy');
         loadTree('cnv');
-
-        // $('a[role="tab"]').on('shown.bs.tab', function (e) {
-        //     e.target // newly activated tab
-        //     e.relatedTarget // previous active tab
-
-        //     alert('shown');
-        // });
-
-        // $('#topoTab a').click(function (e) {
-        //     e.preventDefault();
-        //     $(this).tab('show');
-        // });
 
 
         function loadTree(type)
@@ -234,7 +214,7 @@
                     map: 'value'
                 }]);
 
-                var destID = '#'+ type +'Tab';
+                var destID = '#'+ type +'Topo';
                 $(destID).jqxTree({
                     source: records,
                     checkboxes: true,
@@ -246,8 +226,8 @@
             });
         }
     </script>
-    <script src="js/main.js?<?php echo time(); ?>" type="text/javascript"></script>
     <script src="js/grafy.js?<?php echo time(); ?>" type="text/javascript"></script>
+    <script src="js/main.js?<?php echo time(); ?>" type="text/javascript"></script>
 </body>
 
 </html>
