--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="telo">
         <div class="sidebar">
             <div class="cas">
+                <div class="sidebarNadpis">Výber časového ohraničenia</div>
                 <ul id="searchTab" class="nav nav-tabs" role="tablist">
                     <li class="nav-item" data-tab-num="1">
                         <a class="nav-link active" data-toggle="tab" href="#rawTab" role="tab">RAW</a>
@@ -120,6 +121,7 @@
                 </div>
             </div>
             <div class="topologia">
+                <div class="sidebarNadpis">Výber grafov podľa topologie</div>
                 <div class="topologia_pills">
                     <ul id="topoTab" class="nav nav-tabs" role="tablist">
                         <li class="nav-item">
@@ -143,7 +145,7 @@
         <div class="content">
             <div class="nadpis">
                 <p id="toggleSidebar" class="glyphicon glyphicon-search"></p>
-                <p>Statistiky Sapia</p>
+                <p>Štatistiky Sapia</p>
             </div>
 
             <div id='mainGrafPanel' class="graf-panel">
